# gpu-driven-map

./: .gitignore  CMakeLists.txt  vcpkg.json
cmake/: CulpritTools.cmake  ProjectSetup.cmake
culprit-maths/: CMakeLists.txt
culprit-maths/cmake/: CulpritMathsConfig.cmake.in
culprit-maths/include/culprit-maths/: Concepts.hpp  Consts.hpp  Forward.hpp  Helpers.hpp  Maths.hpp
culprit-maths/include/culprit-maths/Geometry/: Plane.hpp
culprit-maths/include/culprit-maths/Matrix/: Inverse.hpp  Matrix.hpp  Operations.hpp  TransformMaths.hpp
culprit-maths/include/culprit-maths/Quaternion/: Conversion.hpp  Operations.hpp  Quaternion.hpp
culprit-maths/include/culprit-maths/Vector/: Operations.hpp  Vector.hpp
gpu-driven-map/: CMakeLists.txt
gpu-driven-map/src/: main.cpp
tools/: CMakeLists.txt
tools/culprit-tools-shared/: CMakeLists.txt
tools/culprit-tools-shared/include/culprit-tools-shared/: MapIntermediateFormat.hpp  MapIntermediateReader.hpp  PrefabDatabaseFormat.hpp  PrefabDatabaseReader.hpp  ToolsLog.hpp
tools/map-compiler/: CMakeLists.txt
tools/map-compiler/include/geometry/: BrushCSG.h  BrushPlanes.h  MapGeometryTypes.h  PolygonUtils.h  UVUtils.h
tools/map-compiler/include/mesh/: EntityMeshBuilder.h  MeshTypes.h
tools/map-compiler/include/parse/: MapAuthoredTypes.h  MapParser.h
tools/map-compiler/include/passes/: BrushLinkedGroupPass.h  BrushUniquePass.h  PointEntityTransformPass.hpp  WorldspawnPass.h
tools/map-compiler/include/pipeline/: CompiledBrushEntity.h  CompiledMap.h  CompiledModelEntity.h  MapBuildContext.h  MapIntermediateWriter.h  MapParsePipeline.h
tools/map-compiler/include/resolve/: ResolveMaterials.h
tools/map-compiler/src/: main.cpp
tools/map-compiler/src/geometry/: BrushCSG.cpp  BrushPlanes.cpp  PolygonUtils.cpp  UVUtils.cpp
tools/map-compiler/src/mesh/: EntityMeshBuilder.cpp
tools/map-compiler/src/parse/: MapParser.cpp
tools/map-compiler/src/pipeline/: MapIntermediateWriter.cpp  MapParsePipeline.cpp
tools/map-compiler/src/resolve/: ResolveMaterials.cpp
